--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1418,7 +1418,7 @@ th {
   padding: 8px;
   line-height: 1.428571429;
   vertical-align: top;
-  border-top: 1px solid #ddd;
+  border-top: 0px solid #ddd;
 }
 .table > thead > tr > th {
   vertical-align: bottom;
@@ -1433,7 +1433,7 @@ th {
   border-top: 0;
 }
 .table > tbody + tbody {
-  border-top: 2px solid #ddd;
+  border-top: 0px solid #ddd;
 }
 .table .table {
   background-color: #fff;
@@ -5828,6 +5828,9 @@ td.visible-print {
   }
 }
 
+.hiddenRow {
+    padding: 0 !important;
+}
 
 
 
