--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -336,6 +336,14 @@ hr {
   border: 0;
   border-top: 1px solid #eee;
 }
+
+.endSection{
+
+  margin-top: 50px;
+  margin-bottom: 50px;
+
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -5566,11 +5574,11 @@ button.close {
 .carousel-caption {
   position: absolute;
   right: 15%;
-  bottom: 20px;
+  bottom: 0px;
   left: 15%;
   z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 5px;
+  padding-bottom: 10px;
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
@@ -5832,3 +5840,15 @@ td.visible-print {
     padding: 0 !important;
 }
 
+#wrapper{
+  position: relative;
+}
+
+#tabla, #wraper{
+  float: left;
+  display: inline-block;
+}
+
+#googleMap1, #googleMap2{
+  position: absolute;
+}
